# HollowKnight.SpritePacker.Qt

./: CMakeLists.txt  SpritePacker_zh_CN.ts  animation.cpp  animation.hpp  clip.hpp  collection.cpp  collection.hpp  logger.cpp  logger.hpp  main.cpp  packer.cpp  packer.hpp  sprite.hpp  sprite_animation.cpp  sprite_animation.hpp  sprite_info.hpp  sprite_packer.cpp  sprite_packer.hpp  sprite_packer.ui  sprites_folder.hpp  stdafx.hpp
